package SuperRouter;


message Error {
  required string id = 1;
  required int32 code = 2;
  required string message = 3;
}
